force-app/main/default/objects/Activity/fields/CalledNumber__c.field-meta.xml
<CustomField>
    <fullName>CalledNumber__c</fullName>
    <label>ダイヤル番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>