force-app/main/default/objects/Activity/fields/CallerNumber__c.field-meta.xml
<CustomField>
    <fullName>CallerNumber__c</fullName>
    <label>発信者番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>