force-app/main/default/objects/Activity/fields/InteractionUri__c.field-meta.xml
<CustomField>
    <fullName>InteractionUri__c</fullName>
    <label>音声リンク</label>
    <type>Url</type>
</CustomField>