force-app/main/default/objects/Activity/fields/IntNumber__c.field-meta.xml
<CustomField>
    <fullName>IntNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>内線</label>
    <type>Checkbox</type>
</CustomField>